tests/paczka1/small_fuzzy/35873700.err
Error in line 5: S81 A38 78,2
Error in line 7: S81 A219 213,7
Error in line 15: YiEa10uvI A665 83,70
